Chavah.NetCore/wwwroot/css/app/footer.less
@import "../variables.less";

.footer {
    position: fixed;
    width: 100%;
    bottom: 0;
    text-align: center;
    background-color: @brand-background;
    z-index: 100;
    padding-bottom: env(safe-area-inset-bottom); /* On iPhones and other mobile devices with a notch at the bottom for manipulating windows, give extra padding. Without this, the footer is partially covered by the notch. */

    .btn-link {
        transition: all .2s linear;
        border-radius: 1px;
        color: white;

        @media (max-width: @screen-xs-max) {
            padding: 10px 15px 10px 15px;
            font-size: 15px;
        }

        &:focus {
            outline: none;
        }

        &:hover {
            background-color: @brand-color-light;
            color: @text-color-light;
        }

        &.active {
            color: @text-color-darker; // @text-color-light;
            .fa {
                text-shadow: 0 0 30px @text-color-light;
            }
        }
    }

    .audio-status {
        position: absolute;
        left: 10px;
        bottom: 25px;
        color: @text-muted;

        @media (max-width: @screen-xs-max) {
            bottom: initial;
            top: 5px;
        }
    }

    .volume-and-track-time {
        position: absolute;
        right: 0;
        bottom: 10px;

        @media (max-width: @screen-xs-max) {
            display: none;
        }

        .track-time-container {
            color: @text-muted;
        }
    }

    .trackbar {
        position: absolute;
        transition: 1.1s;
        height: 3px;
        width: 0;
        background-color: @text-muted;
    }

    .buffering {
        position: absolute;
        width: 100%;
        height: 10px;
        transition: 1s linear all;
        opacity: 0.5;

        &.ng-hide {
            opacity: 0;
        }
        // Showing it: beginning stage.
        &.ng-hide-remove {
            opacity: 0;
        }
        // Showing it: final stage.
        &.ng-hide-remove-active {
            opacity: 0.5;
        }
    }
    /* Volume control. Courtesy https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/ */
    @track-color: #424242;
    @thumb-color: white;

    @thumb-radius: 8px;
    @thumb-height: 15px;
    @thumb-width: 15px;
    @thumb-shadow-size: 1px;
    @thumb-shadow-blur: 1px;
    @thumb-shadow-color: #111;
    @thumb-border-width: 1px;
    @thumb-border-color: white;

    @track-width: 15px;
    @track-height: 10px;
    @track-shadow-size: 2px;
    @track-shadow-blur: 2px;
    @track-shadow-color: #222;
    @track-border-width: 1px;
    @track-border-color: black;

    @track-radius: 5px;
    @contrast: 5%;

    .shadow(@shadow-size,@shadow-blur,@shadow-color) {
        box-shadow: @shadow-size @shadow-size @shadow-blur @shadow-color, 0px 0px @shadow-size lighten(@shadow-color,5%);
    }

    .track() {
        width: @track-width;
        height: @track-height;
        cursor: pointer;
        animation: 0.2s;
    }

    .thumb() {
        .shadow(@thumb-shadow-size,@thumb-shadow-blur,@thumb-shadow-color);
        border: @thumb-border-width solid @thumb-border-color;
        height: @thumb-height;
        width: @thumb-width;
        border-radius: @thumb-radius;
        background: @thumb-color;
        cursor: pointer;
    }

    input[type=range] {
        position: absolute;
        top: -135px;
        right: 21px;
        writing-mode: vertical-lr;
        -webkit-appearance: none; // override the default appearance
        margin: @thumb-height/2 0;
        width: @track-width;
        background-color: transparent;

        &:focus {
            outline: none;
        }

        &::-webkit-slider-runnable-track {
            .track();
            .shadow(@track-shadow-size,@track-shadow-blur,@track-shadow-color);
            background: @track-color;
            border-radius: @track-radius;
            border: @track-border-width solid @track-border-color;
        }

        &::-webkit-slider-thumb {
            .thumb();
            -webkit-appearance: none;
            margin-top: ((-@track-border-width * 2 + @track-height) / 2) - (@thumb-height / 2);
        }

        &:focus::-webkit-slider-runnable-track {
            background: lighten(@track-color, @contrast);
        }

        &::-moz-range-track {
            .track();
            .shadow(@track-shadow-size,@track-shadow-blur,@track-shadow-color);
            background: @track-color;
            border-radius: @track-radius;
            border: @track-border-width solid @track-border-color;
        }

        &::-moz-range-thumb {
            .thumb();
        }
    }

    .discord-chat {
        width: 50px;
        height: 50px;
        position: absolute;
        bottom: 100px;
        right: 20px;
        background-color: @brand-background;
        border-radius: 50px;
        box-shadow: 0 0 5px 1px gray;
        transition: transform ease-in-out .5s;
        opacity: 0.5;

        img {
            filter: invert(0.9);
            margin-top: 5px;
        }
    }

    @media (max-width: 575px) {
        .discord-chat {
            display: none;
        }
    }

    .discord-chat:hover {
        opacity: 1;
        transform: rotateZ(360deg);
    }
}

